# os-kernel-contest

./: .gitattributes  .gitignore  AGENTS.md  GNUmakefile  Makefile  README.md  office-test.txt
SWTC-la/: Cargo.toml  Makefile  README.md  rust-toolchain.toml
SWTC-la/arceos/: README.md
SWTC-la/arceos/configs/: dummy.toml
SWTC-la/arceos/crates/allocator/: Cargo.toml
SWTC-la/arceos/crates/allocator/tests/: allocator.rs
SWTC-la/arceos/crates/axdriver_crates/axdriver_block/: Cargo.toml
SWTC-la/arceos/crates/axdriver_crates/axdriver_pci/: Cargo.toml
SWTC-la/arceos/crates/axdriver_crates/axdriver_virtio/: Cargo.toml
SWTC-la/arceos/crates/axerrno/: Cargo.toml
SWTC-la/arceos/crates/axfs-ng-vfs/: Cargo.toml
SWTC-la/arceos/crates/axfs-ng-vfs/src/: fs.rs  lib.rs  mount.rs  path.rs  types.rs
SWTC-la/arceos/crates/axio/: Cargo.toml
SWTC-la/arceos/crates/axio/src/: lib.rs
SWTC-la/arceos/crates/axsched/: Cargo.toml
SWTC-la/arceos/crates/axsched/src/: fifo.rs  round_robin.rs  tests.rs
SWTC-la/arceos/crates/kernel_elf_parser/: Cargo.toml
SWTC-la/arceos/crates/kernel_elf_parser/src/: info.rs  lib.rs  user_stack.rs
SWTC-la/arceos/crates/lwext4_rust/: Cargo.toml  build.rs
SWTC-la/arceos/crates/lwext4_rust/src/: blockdev.rs  error.rs  fs.rs  lib.rs  ulibc.rs
SWTC-la/arceos/crates/page_table_multiarch/page_table_entry/: Cargo.toml
SWTC-la/arceos/crates/page_table_multiarch/page_table_multiarch/: Cargo.toml
SWTC-la/arceos/crates/smoltcp/: Cargo.toml  ci.sh
SWTC-la/arceos/crates/smoltcp/src/: lib.rs
SWTC-la/arceos/crates/smoltcp/tests/: netsim.rs
SWTC-la/arceos/crates/weak-map/: Cargo.toml  README.md
SWTC-la/arceos/crates/weak-map/src/: lib.rs  map.rs  traits.rs
SWTC-la/arceos/modules/axalloc/: Cargo.toml
SWTC-la/arceos/modules/axalloc/src/: lib.rs
SWTC-la/arceos/modules/axdisplay/: Cargo.toml
SWTC-la/arceos/modules/axdma/: Cargo.toml
SWTC-la/arceos/modules/axdriver/: Cargo.toml  build.rs
SWTC-la/arceos/modules/axdriver/src/: drivers.rs  lib.rs  macros.rs
SWTC-la/arceos/modules/axfeat/: Cargo.toml
SWTC-la/arceos/modules/axfs-ng/: Cargo.toml
SWTC-la/arceos/modules/axfs-ng/src/: disk.rs
SWTC-la/arceos/modules/axfs-ng/tests/: test_fs.rs
SWTC-la/arceos/modules/axhal/: Cargo.toml  build.rs  linker.lds.S
SWTC-la/arceos/modules/axhal/src/: cpu.rs  irq.rs  lib.rs  mem.rs  paging.rs  time.rs  tls.rs
SWTC-la/arceos/modules/axlog/: Cargo.toml
SWTC-la/arceos/modules/axmm/: Cargo.toml
SWTC-la/arceos/modules/axmm/src/: aspace.rs  frame.rs  lib.rs  utils.rs
SWTC-la/arceos/modules/axnet/: Cargo.toml
SWTC-la/arceos/modules/axnet/src/: lib.rs
SWTC-la/arceos/modules/axns/: Cargo.toml
SWTC-la/arceos/modules/axns/src/: lib.rs
SWTC-la/arceos/modules/axruntime/: Cargo.toml
SWTC-la/arceos/modules/axruntime/src/: lang_items.rs  lib.rs  mp.rs
SWTC-la/arceos/modules/axsync/: Cargo.toml
SWTC-la/arceos/modules/axtask/: Cargo.toml
SWTC-la/arceos/modules/axtask/src/: api.rs  lib.rs  run_queue.rs  task.rs  task_ext.rs  timers.rs  wait_queue.rs
SWTC-la/cargo-config/: config.toml
SWTC-la/dependencies/xapi/: Cargo.toml
SWTC-la/dependencies/xapi/src/fs/: fd_ops.rs  mount.rs
SWTC-la/dependencies/xapi/src/iomux/: mod.rs
SWTC-la/dependencies/xapi/src/ipc/: msg.rs
SWTC-la/dependencies/xapi/src/mm/: brk.rs
SWTC-la/dependencies/xapi/src/net/: mod.rs  socket.rs
SWTC-la/dependencies/xapi/src/sys/: mod.rs  resource.rs
SWTC-la/dependencies/xapi/src/task/: clone.rs  cred.rs  exit.rs  futex.rs  signal.rs
SWTC-la/scripts/make/: build.mk  cargo.mk  config.mk  features.mk  platform.mk  qemu.mk  vdso.mk
SWTC-la/src/: entry.rs  init.sh  main.rs  mm.rs  syscall.rs  test.sh
SWTC-la/xapi/src/: lib.rs
SWTC-la/xapi/src/fs/: ctl.rs  io.rs  mod.rs  stat.rs
SWTC-la/xapi/src/fs/fd/: event.rs  pid.rs  pipe.rs
SWTC-la/xapi/src/iomux/: epoll.rs  poll.rs  select.rs
SWTC-la/xapi/src/ipc/: mod.rs  sem.rs  shm.rs
SWTC-la/xapi/src/mm/: mmap.rs
SWTC-la/xapi/src/net/: sockopt.rs
SWTC-la/xapi/src/sys/: common.rs  time.rs
SWTC-la/xapi/src/task/: ctl.rs  execve.rs  mod.rs  schedule.rs  thread.rs  wait.rs
SWTC-la/xcore/: Cargo.toml
SWTC-la/xcore/src/: config.rs  lib.rs
SWTC-la/xcore/src/fs/: api.rs  fanotify.rs  file.rs  mod.rs
SWTC-la/xcore/src/fs/fd/: dummy.rs  epoll.rs  event.rs  fanotify.rs  file.rs  mod.rs  pid.rs  pipe.rs  timer.rs
SWTC-la/xcore/src/fs/vfs/: mod.rs  virt_file.rs  virt_fs.rs
SWTC-la/xcore/src/ipc/: mod.rs  msg.rs  sem.rs  shm.rs  util.rs
SWTC-la/xcore/src/mm/: init.rs  mod.rs  page_cache.rs  uspace.rs
SWTC-la/xcore/src/net/: mod.rs  sockaddr.rs  socket.rs
SWTC-la/xcore/src/sys/: resources.rs  time.rs
SWTC-la/xcore/src/task/: api.rs  cred.rs  futex.rs  mod.rs  proc.rs  signal.rs  stat.rs
SWTC-la/xcore/src/vdso/: data.rs  image.rs  install.rs  mod.rs
SWTC-la/xmodules/xcache/: Cargo.toml
SWTC-la/xmodules/xcache/src/: lib.rs
SWTC-la/xmodules/xprocess/: Cargo.toml
SWTC-la/xmodules/xprocess/src/: process.rs  thread.rs
SWTC-la/xmodules/xprocess/tests/: group.rs  process.rs  session.rs
SWTC-la/xmodules/xprocess/tests/common/: mod.rs
SWTC-la/xmodules/xsignal/: Cargo.toml
SWTC-la/xmodules/xsignal/src/: action.rs  lib.rs  pending.rs  types.rs
SWTC-la/xmodules/xsignal/src/api/: mod.rs  process.rs  thread.rs
SWTC-la/xmodules/xsignal/src/arch/: aarch64.rs  loongarch64.rs  mod.rs  riscv.rs  x86_64.rs
SWTC-la/xmodules/xuspace/: Cargo.toml
SWTC-la/xmodules/xuspace/src/: lib.rs  ptr.rs  uspace.rs
SWTC-la/xmodules/xutils/: Cargo.toml
SWTC-la/xmodules/xutils/src/: lib.rs  time.rs
SWTC-la/xmodules/xutils/src/collections/: btreemap.rs  mod.rs
SWTC-la/xmodules/xutils/src/ctypes/: fs.rs  ipc.rs  mm.rs  mod.rs  net.rs  sys.rs  task.rs
SWTC-la/xmodules/xvdso/: Cargo.toml  build.rs
SWTC-la/xmodules/xvdso/linker/: vdso-loongarch64.lds  vdso-riscv64.lds  vdso-version.lds
SWTC-la/xmodules/xvdso/src/: lib.rs
SWTC-la/xmodules/xvdso/targets/: loongarch64-unknown-none-vdso.json  riscv64gc-unknown-none-vdso.json
SWTC-la/xmodules/xvma/: Cargo.toml
SWTC-la/xmodules/xvma/src/: lib.rs
(+176 files in other folders)
