[package]
name = "xcore"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axconfig.workspace = true
axfs-ng.workspace = true
axfs-ng-vfs.workspace = true
axhal.workspace = true
axlog.workspace = true
axruntime.workspace = true
axmm.workspace = true
axnet.workspace = true
axns.workspace = true
axsync.workspace = true
axtask.workspace = true
axio.workspace = true
axalloc.workspace = true

xcache.workspace = true
xprocess.workspace = true
xsignal.workspace = true
xuspace.workspace = true
xvma.workspace = true
xutils.workspace = true

axerrno.workspace = true
linkme.workspace = true
linux-raw-sys.workspace = true
memory_addr.workspace = true
page_table_multiarch.workspace = true
spin.workspace = true

crate_interface    = { workspace = true }
numeric-enum-macro = "0.2"
xmas-elf           = "0.10"
cfg-if             = { workspace = true }
lazy_static        = "1.5"
page_table_entry   = { workspace = true }
ctor_bare          = "0.2.1"

chrono = { version = "0.4.41", default-features = false }
rand = { workspace = true, features = ["alloc"] }
kernel-elf-parser = { workspace = true }
inherit-methods-macro = "0.1.0"
lock_api = "0.4.13"
