[package]
name = "xapi"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axfeat.workspace = true

axconfig.workspace = true
axfs-ng.workspace = true
axfs-ng-vfs.workspace = true
axhal.workspace = true
axlog.workspace = true
axmm.workspace = true
axnet.workspace = true
axns.workspace = true
axsync.workspace = true
axtask.workspace = true

xprocess.workspace = true
xsignal.workspace = true
xuspace.workspace = true
xvma.workspace = true

axerrno.workspace = true
bitflags.workspace = true
cfg-if.workspace = true
linkme.workspace = true
linux-raw-sys = { workspace = true, features = ["ioctl"] }
memory_addr.workspace = true
page_table_multiarch.workspace = true
spin.workspace = true

xcore.workspace = true
xutils.workspace = true

axio.workspace = true
num_enum = { version = "0.7", default-features = false }
rand = { workspace = true, features = ["alloc"] }
page_table_entry = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
