[package]
name = "xprocess"
version = "0.1.0"
edition = "2024"
authors = ["Asakura Mizu <asakuramizu111@gmail.com>"]
description = "Process management for ArceOS"

[dependencies]
kspin    = { workspace = true }
lazyinit = { workspace = true }
weak-map = { workspace = true }

[dev-dependencies]
ctor  = "0.10"
kspin = { workspace = true, features = ["smp"] }
