[package]
name = "xsignal"
version = "0.1.0"
edition = "2024"

[dependencies]
axerrno  = { workspace = true }
bitflags = { workspace = true }

axconfig.workspace = true
axhal = { workspace = true, features = ["uspace"] }
axtask = { workspace = true, features = [
    "multitask",
] }

xprocess.workspace = true
xuspace.workspace = true

page_table_multiarch.workspace = true

cfg-if        = { workspace = true }
linux-raw-sys = { workspace = true, features = ["general"] }
log           = { workspace = true }
strum_macros = "0.28"
lock_api = "0.4.12"
derive_more = { version = "2.0.1", default-features = false, features = [
    "full",
] }
