[package]
name = "axfs-ng-vfs"
version = "0.1.0"
edition = "2024"
authors = ["Mivik <mivikq@gmail.com>"]

[lib]

[dependencies]
axerrno               = { workspace = true }
bitflags              = { workspace = true }
inherit-methods-macro = { workspace = true }
lock_api              = "0.4.12"
log                   = { workspace = true }
