[package]
name = "axsched"
version = "0.3.1"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "guoweikang <guoweikang.kernel@gmail.com>",
]
description = "Various scheduler algorithms in a unified interface"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/axsched"
documentation = "https://docs.rs/axsched"
rust-version = "1.76"

[dependencies]
intrusive-collections = { version = "0.10", features = ["nightly"] }
