[package]
name = "lwext4_rust"
authors = ["Luoyuan Xiao <xiaoluoyuan@163.com>", "Mivik <mivikq@gmail.com>"]
version = "0.2.0"
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/Mivik/lwext4_rust"
description = "lwext4 in Rust"

links = "lwext4"
build = "build.rs"

[features]
default = ["print", "std"]
print = ["printf-compat"]
std = []

[dependencies]
lock_api = "0.4.12"
log = "0.4"
printf-compat = { version = "0.1", default-features = false, optional = true }

# See: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
[build-dependencies]
bindgen = "0.71"
