[package]
name = "axfs-ng"
version = "0.1.0"
edition.workspace = true
authors = ["Mivik <mivikq@gmail.com>"]
license.workspace = true
homepage.workspace = true

[features]
default = []
fat = ["dep:fatfs"]
ext4 = ["dep:lwext4_rust"]
thread-local = ["dep:axns", "dep:axsync"]
std = ["lwext4_rust?/std"]

[dependencies]
axdriver = { workspace = true, features = ["block"] }
axerrno = { workspace = true }
axio = { workspace = true, features = ["alloc"] }
axns = { workspace = true, optional = true }
axsync = { workspace = true, optional = true }

bitflags = { workspace = true }
chrono = { version = "0.4.40", default-features = false }
lock_api = "0.4.12"
log = { workspace = true }
spin = { workspace = true, features = ["lock_api"] }

axfs-ng-vfs = { workspace = true }
cfg-if = { workspace = true }
slab = { version = "0.4.9", default-features = false }

[dependencies.lwext4_rust]
workspace = true
optional = true

[dependencies.fatfs]
git = "https://github.com/Mivik/rust-fatfs"
rev = "2685439"
default-features = false
optional = true
features = ["alloc", "lfn", "log_level_trace", "unicode"]

[dev-dependencies]
axdriver = { workspace = true, features = ["block", "ramdisk"] }
axdriver_block = { workspace = true, features = ["ramdisk"] }
env_logger = "0.11"
