[package]
name = "axhal"
version.workspace = true
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS hardware abstraction layer, provides unified APIs for platform-specific operations"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axhal"
documentation = "https://arceos-org.github.io/arceos/axhal/index.html"

[features]
smp = []
alloc = []
fp_simd = []
paging = ["axalloc"]
irq = []
tls = ["alloc"]
rtc = ["riscv_goldfish", "chrono"]
uspace = ["paging"]
default = []

[dependencies]
log               = { workspace = true }
cfg-if            = { workspace = true }
linkme            = { workspace = true }
bitflags          = { workspace = true }
static_assertions = "1.1.0"
kernel_guard      = { workspace = true }
kspin             = { workspace = true }
int_ratio         = "0.1.1"
lazyinit          = { workspace = true }
percpu            = { workspace = true }
memory_addr       = { workspace = true }
handler_table     = "0.1"
page_table_entry     = { workspace = true }
page_table_multiarch = { workspace = true }
spin     = { workspace = true }
axlog    = { workspace = true }
axconfig = { workspace = true }
axalloc  = { workspace = true, optional = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.12"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
riscv_goldfish = { version = "0.1", optional = true }

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongArch64 = "0.2.4"
ns16550a = "0.4.0"
chrono = { version = "0.4", default-features = false, optional = true }

[build-dependencies]
axconfig = { workspace = true }
