[package]
name = "axtask"
version.workspace = true
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS task management module"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axtask"
documentation = "https://arceos-org.github.io/arceos/axtask/index.html"

[features]
default = []

multitask = [
    "dep:axconfig",
    "dep:percpu",
    "dep:kspin",
    "dep:lazyinit",
    "dep:memory_addr",
    "dep:axsched",
    "dep:timer_list",
    "kernel_guard",
    "dep:crate_interface",
    "dep:cpumask",
    "dep:crate_interface",
    "dep:weak-map",
]
irq = []
tls = ["axhal/tls"]
preempt = ["irq", "percpu?/preempt", "kernel_guard/preempt"]
smp = ["kspin/smp"]

sched_fifo = ["multitask"]
sched_rr = ["multitask", "preempt"]
sched_cfs = ["multitask", "preempt"]

test = ["percpu?/sp-naive"]

[dependencies]
cfg-if          = { workspace = true }
log             = { workspace = true }
axhal           = { workspace = true }
axconfig        = { workspace = true, optional = true }
percpu          = { workspace = true, optional = true }
kspin           = { workspace = true, optional = true }
lazyinit        = { workspace = true, optional = true }
memory_addr     = { workspace = true, optional = true }
timer_list      = { version = "0.1", optional = true }
kernel_guard    = { workspace = true, optional = true }
crate_interface = { workspace = true, optional = true }
cpumask         = { version = "0.1", optional = true }
weak-map        = { workspace = true, optional = true }
axsched         = { workspace = true, optional = true }
[dev-dependencies]
rand = { workspace = true, features = ["std", "std_rng", "thread_rng"] }
axhal = { workspace = true, features = ["fp_simd"] }
axtask = { workspace = true, features = ["test", "multitask"] }
