[package]
name = "axdriver_block"
edition = "2021"
description = "Common traits and types for block storage drivers"
documentation = "https://arceos-org.github.io/axdriver_crates/axdriver_block"
keywords = ["arceos", "driver", "blk"]
version = "0.1.2"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/axdriver_crates"
categories = ["os", "no-std", "hardware-support"]

[features]
ramdisk = []
bcm2835-sdhci = ["dep:bcm2835-sdhci"]
visionfive2-sd = ["dep:visionfive2-sd"]
default = []

[dependencies]
log = "0.4"
riscv = "0.14"
axdriver_base = { workspace = true }
bcm2835-sdhci = { git = "https://github.com/lhw2002426/bcm2835-sdhci.git", rev = "e974f16", optional = true }
visionfive2-sd = { git = "https://github.com/os-module/visionfive2-sd.git", rev = "af75139", optional = true }