[package]
name = "page_table_multiarch"
description = "Generic page table structures for various hardware architectures"
documentation = "https://docs.rs/page_table_multiarch"
version = "0.5.7"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/page_table_multiarch"
keywords = ["arceos", "paging", "page-table", "virtual-memory"]
categories = ["os", "hardware-support", "memory-management", "no-std"]
rust-version = "1.85"

[features]
default = []
copy-from = ["dep:bitmaps"]

[dependencies]
log = "0.4"
memory_addr = "0.4"
page_table_entry = { workspace = true }
bitmaps = { version = "3.2", default-features = false, optional = true }

[target.'cfg(any(target_arch = "x86_64", doc))'.dependencies]
x86 = "0.52"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64", doc))'.dependencies]
riscv = { version = "0.14", default-features = false }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "doc"]

[dev-dependencies]
rand = { version = "0.9.3", default-features = false, features = ["small_rng"] }
